fix: correct spacing and margin for how it works screens

--- a/src/pages/Misc/HowItWorks/HowItWorks.module.scss
+++ b/src/pages/Misc/HowItWorks/HowItWorks.module.scss
@@ -9,7 +9,7 @@
     margin-bottom: 66px;
 
     .title {
-      padding-top: 0;
+      padding: 0;
     }
 
     a {
@@ -85,6 +85,7 @@
 
       .card {
         padding: 40px;
+        margin-top: 20px;
       }
     }
   }
